# programming_pearls

./: CMakeLists.txt  main.cpp
Cpp_Primer_Plus/Chapter15_Friends_Exceptions_and_More/: CMakeLists.txt  error5.cpp  exc_mean.h  sales.cpp  sales.h  use_sales.cpp
Data_Structures_and_Algorithm_Analysis_in_Cpp/: CMakeLists.txt
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_10_Algorithm_Design_Techniques/: CMakeLists.txt  DSL.h  Fig10_46.cpp  Fig10_53.cpp  Fig10_63.cpp  Random.h  TestDSL.cpp  TicTac.cpp  TicTacSlow.cpp  all_pairs_shortest_path.h  matrix.h  optMatrix.h  primality.h  tictactoe.h
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_10_Algorithm_Design_Techniques_tests/: CMakeLists.txt  algorithm_design_test.cpp
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_12_Advanced_Data_Structures_and_Implementation/: CMakeLists.txt  PairingHeap.h  RedBlackTree.h  SplayTree.h  SuffixArray.h  TestPairingHeap.cpp  TestRedBlackTree.cpp  TestSplayTree.cpp  TestTreap.cpp  Treap.h
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_12_Advanced_Data_Structures_and_Implementation_tests/: CMakeLists.txt  adv_tree_test.cpp
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_3_Lists_Stacks_and_Queues/: CMakeLists.txt  List.h  Queue.h  Vector.h
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_3_Lists_Stacks_and_Queues_tests/: CMakeLists.txt  List_Vector_test.cpp
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_4_Trees/: AvlTree.h  BinarySearchTree.h  CMakeLists.txt  TestAvlTree.cpp  dsexceptions.h
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_4_Trees_tests/: CMakeLists.txt  tree_test.cpp
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_6_Priority_Queues/: BinaryHeap.h  BinomialQueue.h  CMakeLists.txt  LeftistHeap.h  TestBinaryHeap.cpp  TestBinomialQueue.cpp  TestLeftistHeap.cpp
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_6_Priority_Queues_tests/: CMakeLists.txt  priority_queues_test.cpp
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_7_Sorting/: CMakeLists.txt  RadixSort.h  Sort.h
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_7_Sorting_tests/: CMakeLists.txt  sorting_test.cpp
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_8_Disjoint_Sets/: CMakeLists.txt  DisjSets.h  TestFastDisjSets.cpp
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_8_Disjoint_Sets_tests/: CMakeLists.txt  disjoint_sets_test.cpp
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_9_Graph_Algorithms/: CMakeLists.txt  Graph.h  Paths.cpp  WordLadder.cpp
Data_Structures_and_Algorithm_Analysis_in_Cpp/Chapter_9_Graph_Algorithms_tests/: CMakeLists.txt  graph_algorithms_test.cpp
Data_Structures_and_Algorithm_Analysis_in_Cpp/include/: UniformRandom.h  dsexceptions.h
Design_Patterns/Behavioral_Patterns/: CMakeLists.txt
Design_Patterns/Creational_Patterns/: CMakeLists.txt
Design_Patterns/Structural_Patterns/: CMakeLists.txt
Elements_of_Programming_Interviews/: CMakeLists.txt
Elements_of_Programming_Interviews/Chapter_10_Binary_Trees/: BST_prototype.h  BST_sorted_order.h  Balanced_binary_tree.h  Binary_tree_lock.h  Binary_tree_prototype.h  Binary_tree_utils.h  Binary_tree_with_parent_prototype.h  CMakeLists.txt  Connect_leaves_binary_tree.h  Exterior_binary_tree.h  Inorder_traversal_with_parent.h  Lowest_common_ancestor.h  Lowest_common_ancestor_employee.h  Lowest_common_ancestor_no_parent.h  Reconstruct_binary_tree_pre_in_orders.h  Reconstruct_postorder_with_null.h  Reconstruct_preorder_with_null.h  Successor.h  Symmetric_binary_tree.h  binary-tree-preorder-traversal-iterative.h  convert_right_child_to_next_sibling.h  k-balanced_binary_tree.h  k-balanced_binary_tree_erdos.h  k-th_node_binary_tree.h  largest_complete_subtree.h  path-sum-binary-tree.h  populating-next-right-pointers-any-binary-tree.h  populating-next-right-pointers.h  postorder_traversal_with_parent.h  preorder_traversal_with_parent.h  sum-root-to-leaf-binary-tree.h  tree_traversal.h
Elements_of_Programming_Interviews/Chapter_10_Binary_Trees_tests/: Binary_Trees_test.cpp  CMakeLists.txt
Elements_of_Programming_Interviews/Chapter_11_Heaps/: Approximate_sort.h  CMakeLists.txt  Closest_stars.h  Merge_sorted_arrays.h  Online_median.h  Stack_queue_using_heap.h  heaps_boot_camp.h  k-largest-elements-binary-heap.h  sort_k-increasing-decreasing_array.h
Elements_of_Programming_Interviews/Chapter_11_Heaps_tests/: CMakeLists.txt  Heaps_test.cpp
Elements_of_Programming_Interviews/Chapter_12_Searching/: Bentleybsearch.h  Binary_search_Ai=i.h  Binary_search_ascending_descending_array.h  Binary_search_circular_array.h  Binary_search_circular_array_with_duplicates.h  Binary_search_first_k.h  Binary_search_first_larger_k.h  Binary_search_k_circular_array.h  Binary_search_local_minimum.h  Binary_search_upper_lower_k.h  CMakeLists.txt  DivisionFloat.h  Find_missing_and_duplicate_XOR.h  Finding_min_max.h  Matrix_search.h  Missing_element.h  Square_root.h  matrix_search_erdos.h  min_index_distance.h  order_statistic.h  prefix_search.h  square-root-int.h  student_search.h
Elements_of_Programming_Interviews/Chapter_12_Searching_tests/: CMakeLists.txt  Searching_test.cpp
Elements_of_Programming_Interviews/Chapter_13_Hash_Tables/: Anagrams.h  Anonymous_letter.h  CMakeLists.txt  Can_string_be_palindrome_hash.h  Can_string_be_palindrome_sorting.h  Collatz_conjecture.h  Hash_dictionary.h  LRUCache.h  Lowest_common_ancestor_hash.h  Nearest_repetition.h  Smallest_subarray_covering_set.h  Smallest_subarray_covering_set_stream.h  Subseq_cover.h  anagrams_needle_haystack.h  average-top-3-scores.h  merge_contacts.h  (+4 more)
Google_Test_Samples/: CMakeLists.txt  mock_turtle.h  mock_turtle_test.cpp  painter.h  prime_tables.h  sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3-inl.h  sample3_unittest.cc  sample4.cc  sample4.h  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc  turtle.h
column_1_cracking_the_oyster_tests/: CMakeLists.txt  bit_sort_test.cpp  testsort.cpp  weiss_sort_test.cpp
(+493 files in other folders)
