cmake_minimum_required(VERSION 3.3)
project(Algorithm_analysis C CXX)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_subdirectory(lib/googletest)
add_subdirectory(Programming_Pearls)
add_subdirectory(Data_Structures_and_Algorithm_Analysis_in_Cpp)
add_subdirectory(The_Algorithm_Design_Manual)
add_subdirectory(The_C_Programming_Language)
add_subdirectory(Elements_of_Programming_Interviews)
