cmake_minimum_required(VERSION 3.6)
project(programming_pearls)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(Data_Structures_and_Algorithm_Analysis_in_Cpp)
add_subdirectory(Design_Patterns)
add_subdirectory(Elements_of_Programming_Interviews)
add_subdirectory(lib/googletest)
add_subdirectory(Programming_Pearls)
add_subdirectory(The_Algorithm_Design_Manual)
add_subdirectory(The_Art_of_Computer_Programming)
add_subdirectory(The_C_Programming_Language)
add_subdirectory(Google_Test_Samples)
add_subdirectory(Cpp_Primer_Plus)
