cmake_minimum_required(VERSION 3.3)

project(Ch9_Graph_Algorithms C CXX)

add_definitions(-std=c++11)

set(HEADER_FILES
        Graph.h
        )

#set(SOURCE_FILES
#        bitsort.cpp bitsortgen.cpp qsortints.cpp sortints.cpp spacebitsort.cpp
#        )

#add_library(Ch9_Graph_Algorithms STATIC ${SOURCE_FILES} ${HEADER_FILES})