cmake_minimum_required(VERSION 3.3)
project(Design_Patterns C CXX)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

include_directories(Chain_of_Responsibility)
include_directories(Command)
include_directories(Interpreter)
include_directories(Iterator)
include_directories(Mediator)
include_directories(Memento)
include_directories(Observer)
include_directories(State)
include_directories(Strategy)
include_directories(Template_Method)
include_directories(Visitor)

add_subdirectory(Chain_of_Responsibility)
add_subdirectory(Chain_of_Responsibility_tests)
add_subdirectory(Command)
add_subdirectory(Command_tests)
add_subdirectory(Interpreter)
add_subdirectory(Interpreter_tests)
add_subdirectory(Iterator)
add_subdirectory(Iterator_tests)
add_subdirectory(Mediator)
add_subdirectory(Mediator_tests)
add_subdirectory(Memento)
add_subdirectory(Memento_tests)
add_subdirectory(Observer)
add_subdirectory(Observer_tests)
add_subdirectory(State)
add_subdirectory(State_tests)
add_subdirectory(Strategy)
add_subdirectory(Strategy_tests)
add_subdirectory(Template_Method)
add_subdirectory(Template_Method_tests)
add_subdirectory(Visitor)
add_subdirectory(Visitor_tests)
