cmake_minimum_required(VERSION 3.3)
project(Design_Patterns C CXX)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

include_directories(Adapter)
include_directories(Bridge)
include_directories(Composite)
include_directories(Decorator)
include_directories(Facade)
include_directories(Flyweight)
include_directories(Proxy)

add_subdirectory(Adapter)
add_subdirectory(Adapter_tests)
add_subdirectory(Bridge)
add_subdirectory(Bridge_tests)
add_subdirectory(Composite)
add_subdirectory(Composite_tests)
add_subdirectory(Decorator)
add_subdirectory(Decorator_tests)
add_subdirectory(Facade)
add_subdirectory(Facade_tests)
add_subdirectory(Flyweight)
add_subdirectory(Flyweight_tests)
add_subdirectory(Proxy)
add_subdirectory(Proxy_tests)
